--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
     <create-game-component></create-game-component>
+    <game-board-component></game-board-component>
   </body>
 </html>
