--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<script src="dist/app.bundle.js"></script>
   </head>
   <body>
-    <create-game-component></create-game-component>
-    <game-board-component></game-board-component>
+    <game-component></game-component>
   </body>
 </html>
